# Simbolic-Intelligence

./: .gitignore  CHANGELOG.md  COMMERCIAL_LICENSE.md  COMMUNITY_ENGAGEMENT.md  CONTRIBUTING.md  DEPLOYMENT_ROADMAP.md  FINAL_PACKAGE_SUMMARY.md  GITHUB_STRATEGY_OVERVIEW.md  GITHUB_UPLOAD_SUMMARY.md  LICENSE  PATENT_NOTICE.md  README.md  README_USAGE.md  REPOSITORY_TEMPLATE.md  STRATEGIC_RECOMMENDATION.md  SYMBOLIC_LEGAL_INTEGRATION.md  UPLOAD_READY.md  VERIFICATION_REPORT.json  prepare_github_upload.py  pyproject.toml  requirements.txt  run_proof_demo.py  run_tests.py  setup.py  verify_obfuscated_functionality.py
docs/: PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md
examples/: basic_usage.py  demo_ecommerce.py  demo_ecommerce_obf.py  demo_javascript.js
legal-evidence/: COMPLETE_PATENT_DISCLOSURE.md
src/: analyze_obf.py  multi_language_analyzer_obf.py  symbolic_analyzer_obf.py  symbolic_intelligence.py  symbolic_intelligence_obf.py  symbolic_obfuscator.py  symbolic_obfuscator_v2.py
src/maya_legal_intelligence/: __init__.py  analyzer.py  cli.py  core.py  core_lite.py  utils.py
tests/: test_core.py  test_functionality_proof_backup.py
